# blast

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  package.xml
.github/workflows/: build-aarch64.yml  build-and-test-x86_64.yml  cmake.yml
bench/: Benchmark.hpp  CMakeLists.txt  Complexity.hpp  Gemm.cpp  GemmDynamic.cpp  GemmImpl.cpp  GemmKernel.cpp  GemmLibxsmm.cpp  GemmStatic.cpp  PanelGemm.cpp  PanelGemmImpl.cpp  PotrfDynamic.cpp  PotrfStatic.cpp
bench/analysis/: Complexity.nb  dgemm_performance.py  dgemm_performance_change.py  dgemm_performance_ratio.py  filter_aggregate.m  partial_store.m  potrf.m
bench/blas/: CMakeLists.txt  Cholesky.cpp  Gemm.cpp  Getrf.cpp  Iamax.cpp  Main.cpp  Potrf.cpp  Syrk.cpp  SyrkPotrf.cpp  Trmm.cpp  Trmv.cpp  Trsv.cpp
bench/blasfeo/: CMakeLists.txt  Gemm.cpp  Potrf.cpp  Syrk.cpp  SyrkPotrf.cpp  Trmm.cpp
bench/blast/: CMakeLists.txt
bench/blast/math/dense/: DynamicGemm.cpp  DynamicIamax.cpp  DynamicSyrk.cpp  StaticGemm.cpp  StaticGetrf.cpp  StaticIamax.cpp  StaticPotrf.cpp  StaticSyrk.cpp  StaticTrmm.cpp  StaticTrsm.cpp
bench/blast/math/expressions/: AssignDensePanel.cpp  AssignPanelDense.cpp
bench/blast/math/panel/: DynamicGemm.cpp  DynamicPotrf.cpp  StaticGemm.cpp  StaticMatrixPointer.cpp  StaticPotrf.cpp
bench/blast/math/simd/: Ger.cpp  Load.cpp  PartialGemm.cpp  PartialLoad.cpp  PartialStore.cpp  Potrf.cpp  Store.cpp  Trmm.cpp  Trsm.cpp
bench/blaze/: CMakeLists.txt  Column.cpp  DynamicTrmm.cpp  Gemm.cpp  GemmSubmatrix.cpp  LowerMatrixScalarMultiply.cpp  SqrNorm.cpp  StaticTrmm.cpp  Syrk.cpp  Trmm.cpp  Trmv.cpp  Trsv.cpp  ZeroMatrixAssign.cpp
bench/blazefeo/: CMakeLists.txt  Gemm2Dynamic.cpp  Gemm2Static.cpp  GemmDynamic.cpp  GemmStatic.cpp  PotrfDynamic.cpp  PotrfStatic.cpp
bench/blazefeo/math/dense/: DynamicGemm.cpp  DynamicIamax.cpp  DynamicSyrk.cpp  Iamax.cpp  StaticGemm.cpp  StaticGetrf.cpp  StaticIamax.cpp  StaticPotrf.cpp  StaticSyrk.cpp  StaticTrmm.cpp  StaticTrsm.cpp
bench/blazefeo/math/expressions/: AssignDensePanel.cpp  AssignPanelDense.cpp
bench/blazefeo/math/panel/: DynamicGemm.cpp  DynamicPanelGemm.cpp  DynamicPanelPotrf.cpp  DynamicPotrf.cpp  StaticGemm.cpp  StaticPanelGemm.cpp  StaticPanelPotrf.cpp  StaticPotrf.cpp
bench/blazefeo/math/simd/: Ger.cpp  Load.cpp  PartialGemm.cpp  PartialLoad.cpp  PartialStore.cpp  Potrf.cpp  Store.cpp  Trmm.cpp  Trsm.cpp
bench/blazefeo/register_matrix/: PartialStore.cpp  Potrf.cpp  Store.cpp  Trsm.cpp
bench/common/: Benchmark.cpp  CMakeLists.txt  Syrk.cpp
bench/eigen/: CMakeLists.txt  Gemm.cpp  Potrf.cpp  Syrk.cpp
bench/gemm_kernel/: Gemm.cpp  Store.cpp  StoreVariableSize.cpp
bench/libxsmm/: CMakeLists.txt  Gemm.cpp
bench/math/expressions/: PanelMatrix.cpp
bench/register_matrix/: Ger.cpp  PartialStore.cpp  Potrf.cpp  Store.cpp  Trsm.cpp
blasfeo/: Blasfeo.hpp  BlasfeoApi.hpp  BlasfeoVector.hpp  CustomMatrix.hpp  DynamicMatrix.hpp  Gemm.hpp  Matrix.hpp  Potrf.hpp  SizeT.hpp  SyrkPotrf.hpp  Trmm.hpp
blazefeo/: Block.hpp  DynamicPanelMatrix.hpp  Exception.hpp  Gemm.hpp  PaddedSize.hpp  PanelMatrix.hpp  SizeT.hpp  StaticPanelMatrix.hpp
blazefeo/gemm/: GemmKernel.hpp  GemmKernel_double_1_1_4.hpp  GemmKernel_double_2_1_4.hpp  GemmKernel_double_3_1_4.hpp
blazefeo/math/: DynamicPanelMatrix.hpp  PanelMatrix.hpp  StaticPanelMatrix.hpp
blazefeo/system/: Tile.hpp
cmake/: FindBLASFEO.cmake  InitialCache.cmake  blast-config.cmake.in
docker/aarch64/: Dockerfile
docker/x86_64/: Dockerfile
include/bench/: Benchmark.hpp  Complexity.hpp  Gemm.hpp  Getrf.hpp  Iamax.hpp  Syrk.hpp  Trmm.hpp  Trsm.hpp
include/blasfeo/: Blasfeo.hpp  BlasfeoApi.hpp  BlasfeoMatrix.hpp  BlasfeoVector.hpp  BlazeInterop.hpp  CustomMatrix.hpp  DynamicMatrix.hpp  Exception.hpp  Matrix.hpp  Memory.hpp  SizeT.hpp
include/blazefeo/: Blaze.hpp  Exception.hpp
include/test/: MakePositiveDefinite.hpp  Randomize.hpp  Testing.hpp  Tolerance.hpp
smoke/: Block.hpp  DynamicPanelMatrix.hpp  Gemm.hpp  GemmKernel.hpp  GemmKernel_double_1_1_4.hpp  GemmKernel_double_2_1_4.hpp  GemmKernel_double_3_1_4.hpp  PaddedSize.hpp  Panel.hpp  PanelMatrix.hpp  SizeT.hpp  StaticMatrix.hpp  StaticPanelMatrix.hpp
test/: CMakeLists.txt  DynamicPanelMatrixTest.cpp  Gemm2Test.cpp  GemmKernelTest.cpp  GemmTest.cpp  PaddedSizeTest.cpp  PanelTest.cpp  PotrfTest.cpp  Randomize.hpp  RegisterMatrixTest.cpp  StaticMatrixTest.cpp  StaticPanelMatrixTest.cpp  SubmatrixTest.cpp  Testing.hpp
test/blasfeo/: CMakeLists.txt  CustomMatrixTest.cpp  DynamicMatrixTest.cpp  GemmTest.cpp  PotrfTest.cpp  SyrkPotrfTest.cpp  SyrkTest.cpp
test/blast/: CMakeLists.txt
test/blast/math/dense/: DynamicMatrixPointerTest.cpp  DynamicVectorPointerTest.cpp  GemmTest.cpp  GerTest.cpp  Getf2Test.cpp  GetrfTest.cpp  Iamax.cpp  MatrixPointerTest.cpp  PotrfTest.cpp  StaticVectorPointerTest.cpp  SyrkTest.cpp  TrmmTest.cpp  TrsmTest.cpp
test/blast/math/expressions/: AssignDensePanelTest.cpp  AssignPanelDenseTest.cpp  PMatTransExprTest.cpp
test/blast/math/panel/: DynamicPanelMatrixPointerTest.cpp  DynamicPanelMatrixTest.cpp  GemmTest.cpp  PotrfTest.cpp  StaticPanelMatrixTest.cpp
test/blast/math/simd/: DynamicRegisterMatrixTest.cpp  HsumTest.cpp  RegisterMatrixTest.cpp  SimdVecTest.cpp
test/blast/math/views/: RowTest.cpp  SubmatrixTest.cpp
test/math/dense/: DynamicMatrixPointerTest.cpp  DynamicVectorPointerTest.cpp  GemmTest.cpp  GerTest.cpp  Getf2Test.cpp  GetrfTest.cpp  Iamax.cpp  PotrfTest.cpp  StaticMatrixPointerTest.cpp  StaticVectorPointerTest.cpp  StorageOrderTest.cpp  SyrkTest.cpp  TrmmTest.cpp  TrsmTest.cpp  TrsvTest.cpp
test/math/expressions/: AssignDensePanelTest.cpp  AssignPanelDenseTest.cpp  PMatTransExprTest.cpp
test/math/panel/: DynamicPanelMatrixPointerTest.cpp  DynamicPanelMatrixTest.cpp  GemmTest.cpp  PotrfTest.cpp  StaticPanelMatrixPointerTest.cpp  StaticPanelMatrixTest.cpp
test/math/simd/: AbsTest.cpp  DynamicRegisterMatrixTest.cpp  HmaxTest.cpp  HsumTest.cpp  RegisterMatrixTest.cpp  SimdPackTest.cpp  SimdVecTest.cpp
test/math/views/: RowTest.cpp  SubmatrixTest.cpp
test/simd/: HsumTest.cpp
(+271 files in other folders)
